@@ -1,22 +1,0 @@
-<?php
-/*
-// Announcement Code...
-   $ann_subject = trim($CURUSER['curr_ann_subject']);
-   $ann_body = trim($CURUSER['curr_ann_body']);
-   if ((!empty($ann_subject)) && (!empty($ann_body)))
-   {
-   $HTMLOUT .= "<div class='headline'>{$lang['index_announce']}</div>
-   <div class='headbody'>
-   <table width='100%' >
-   <tr><td bgcolor='transparent'><b><font color='red'>{$lang['index_ann_title']}&#160;:
-   ".htmlsafechars($ann_subject)."</font></b></td></tr>
-   <tr><td style='padding: 10px; background:lightgrey'>
-   ".format_comment($ann_body)."
-   <br><br>
-   {$lang['index_ann_click']}<a href='{$site_config['baseurl']}/clear_announcement.php'>
-   <i><b>{$lang['index_ann_here']}</b></i></a>{$lang['index_ann_clear']}</td></tr></table></div><br>\n";
-   }
-*/
-//==
-// End Class
-// End File
